[project]
name = "resemble-enhance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celluloid>=0.2.0",
    "deepspeed>=0.12.4",
    "gradio>=4.8.0",
    "librosa>=0.10.1",
    "matplotlib>=3.8.1",
    "numpy>=1.26.2",
    "omegaconf>=2.3.0",
    "pandas>=2.1.3",
    "ptflops>=0.7.1.2",
    "resampy>=0.4.2",
    "rich>=13.7.0",
    "scipy>=1.11.4",
    "soundfile>=0.12.1",
    "tabulate>=0.8.10",
    "torch>=2.1.1",
    "torchaudio>=2.1.1",
    "torchvision>=0.16.1",
    "tqdm>=4.66.1",
]


[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
line_length = 120
